<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:visibility="gone"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:background="@drawable/heading_bg"
        android:padding="15dp"
        android:text="@string/heading2"
        android:textAlignment="center"
        android:textColor="#34495E"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/allCustomersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewAllCustomers"
        android:layout_marginTop="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_button_bg"
        android:layout_gravity="center"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/addCustomersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_customer"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_button_bg"
        android:layout_gravity="center"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/transactionHistoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_history"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_button_bg"
        android:layout_gravity="center"
        android:textColor="@android:color/white" />

</LinearLayout>
